--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ torch = "^2.0.0"
 transformers = "^4.32.0"
 faster-whisper = "^0.9.0"
 pyannote-audio = "^3.1.0"
+pydub = "^0.25.1"
 
 
 [build-system]
